Wrap ``--add-opens=java.base/java.nio=ALL-UNNAMED` as a default envir… (#364)
* Wrap ``--add-opens=java.base/java.nio=ALL-UNNAMED` as a default environment variable for the .sh script.

This is required to deal with Snowflake JDBC error https://community.snowflake.com/s/article/JDBC-Driver-Compatibility-Issue-With-JDK-16-and-Later , which recently re-emerged and is likely to re-emerge again.

* Preserve existing _JAVA_OPTIONS arguments

* Apply the env argument to dwh-migration-dumper application instead.

* Really apply the env argument to dwh-migration-dumper application instead.

* Let gradle build 2 versions of startup scripts for each app and add run-time logic to choose which one based on java version.

 The two apps are dwh-migration-dumper and dwh-cloud-extractor. The versioning logic is applied in dwh-migration-dumper wrapper and in gce_launcher.sh script.

 Maneually tested file generation and executing dwh-migration-dumper with different java versions.
 Tested versions: java8, java11, java17

* Fix Gradle mysterious dependencies

* Fix Gradle mysterious dependencies

* Make the logic more readable.