@@ -94,6 +94,20 @@ dependencies {
 
 startScripts {
     classpath = files('$APP_HOME/lib/*')
+    defaultJvmOpts = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
+}
+
+task createStartScriptForJava8(type: CreateStartScripts) {
+    mainClass = tasks.startScripts.mainClass
+    applicationName = 'dwh-migration-dumper-java8'
+    outputDir = tasks.startScripts.outputDir
+    classpath = tasks.startScripts.classpath
+}
+
+tasks.named('installDist') {
+    dependsOn 'createStartScriptForJava8'
+    dependsOn 'cloudExtractorStartScripts'
+    dependsOn 'cloudExtractorStartScriptsForJava8'
 }
 
 application {
@@ -102,11 +116,20 @@ application {
     applicationName = 'dwh-migration-dumper'
 }
 
-task cloudExtractorStartScripts(type: CreateStartScripts) {
+task cloudExtractorStartScriptsForJava8(type: CreateStartScripts) {
     outputDir = layout.buildDirectory.dir('install/cloud-extractor/bin').get().asFile
     classpath = tasks.startScripts.classpath
     mainClass = 'com.google.edwmigration.dumper.application.dumper.clouddumper.Main'
     applicationName = 'dwh-cloud-extractor'
+}
+
+task cloudExtractorStartScripts(type: CreateStartScripts) {
+    outputDir = tasks.cloudExtractorStartScriptsForJava8.outputDir
+    classpath = tasks.cloudExtractorStartScriptsForJava8.classpath
+    mainClass = tasks.cloudExtractorStartScriptsForJava8.mainClass
+    applicationName = 'dwh-cloud-extractor-java8'
+    defaultJvmOpts = ["--add-opens=java.base/java.nio=ALL-UNNAMED"]
+    dependsOn 'cloudExtractorStartScriptsForJava8'
 }
 
 licenseReport {
@@ -549,6 +572,14 @@ licenseReport {
 
 tasks.named('check') {
     dependsOn 'checkLicense'
+}
+
+tasks.named('distTar') {
+    dependsOn 'installDist'
+}
+
+tasks.named('distZip') {
+    dependsOn 'installDist'
 }
 
 tasks.register('generateSourceMirror', Copy) {
